# HostSvc

./: .gitignore  CMakeLists.txt  HostSvcCommon.h  HostSvcCommon.hpp  ProxyObjectBase.hpp  RPCChannel.h  RPCChannel.hpp  RPCController.h  RPCRequest.proto  RPCResponse.proto  RealObjectBase.hpp  ServiceImpl.h  ServiceImpl.hpp  TestObject.h  client.cpp  client.hpp  clientManager.hpp  example.proto  main.cpp  packedmessage.h  proto.sh  server.cpp
